--- a/09.ipynb
+++ b/09.ipynb
@@ -41,6 +41,7 @@
     }
    ],
    "source": [
+    "# Đường dẫn ảnh\n",
     "img = Image.open(my_path)\n",
     "plt.imshow(img)"
    ]
@@ -73,6 +74,7 @@
     }
    ],
    "source": [
+    "# Chuyển sang ảnh xám\n",
     "img_gray = img.convert('L')\n",
     "plt.imshow(img_gray, cmap='gray')"
    ]
