--- a/11.ipynb
+++ b/11.ipynb
@@ -277,8 +277,226 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "6e27a783-9efd-4b25-b3d6-00c27bdae661",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  5   4   3   1 100]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Xóa đi một ví trí nào đó trong mảng\n",
+    "arr = np.delete(arr, 3)\n",
+    "print(arr)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "022abb15-77ea-42c1-b967-19258639c060",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 6 8]\n",
+      " [5 7 9]]\n",
+      "[[3 1 2]\n",
+      " [4 6 5]\n",
+      " [9 7 8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Tạo một mảng 2 chiều\n",
+    "arr = np.array([[3, 1, 2],\n",
+    "                [4, 6, 8],\n",
+    "                [9, 7, 5]])\n",
+    "sap_xep_theo_hang = np.sort(arr, axis=1) # tăng dần\n",
+    "print(sap_xep_theo_hang)\n",
+    "\n",
+    "sap_xep_theo_cot = np.sort(arr, axis=0) # tăng dần\n",
+    "print(sap_xep_theo_cot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "85374629-7af4-4d92-8681-cecb6b09306a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[3 2 1]\n",
+      " [8 6 4]\n",
+      " [9 7 5]]\n",
+      "[[9 7 8]\n",
+      " [4 6 5]\n",
+      " [3 1 2]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Tạo một mảng 2 chiều\n",
+    "arr = np.array([[3, 1, 2],\n",
+    "                [4, 6, 8],\n",
+    "                [9, 7, 5]])\n",
+    "\n",
+    "sap_xep_theo_hang = -np.sort(-arr, axis=1) # giảm dần\n",
+    "print(sap_xep_theo_hang)\n",
+    "\n",
+    "sap_xep_theo_cot = -np.sort(-arr, axis=0) # giảm dần\n",
+    "print(sap_xep_theo_cot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "7732f56d-4ff2-4f94-9d40-aaa06bbf5155",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Tạo một mảng 2D\n",
+    "arr = np.array([[1, 2, 3], [4, 5, 6]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "b1574768-7dcd-4330-aa7e-d4fa7635bdf3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Số chiều: 2\n",
+      "Kích thước: 6\n",
+      "Hình dạng: (2, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Sử dụng các thuộc tính để lấy thông tin về mảng\n",
+    "so_chieu = arr.ndim  # Số chiều (2 chiều)\n",
+    "kich_thuoc = arr.size  # Kích thước (tổng số phần tử, 6)\n",
+    "hinh_dang = arr.shape  # Hình dạng (số hàng x số cột, (2, 3))\n",
+    "\n",
+    "print(\"Số chiều:\", so_chieu)\n",
+    "print(\"Kích thước:\", kich_thuoc)\n",
+    "print(\"Hình dạng:\", hinh_dang)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "a29a3222-c627-4709-92c4-d1ed24efba5d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1. 2. 3. 4. 5.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Chuyển đổi kiểu dữ liệu\n",
+    "arr = np.array([1, 2, 3, 4, 5])\n",
+    "arr_float = arr.astype(float)\n",
+    "print(arr_float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "32c32daa-6cc3-4905-a9af-2b1800ff6b12",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]]\n",
+      "[[1 2]\n",
+      " [3 4]\n",
+      " [5 6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Thay đổi hình dạng của mảng\n",
+    "arr = np.array([1, 2, 3, 4, 5, 6])\n",
+    "reshaped_arr = arr.reshape(2,3)\n",
+    "print(reshaped_arr)\n",
+    "reshaped_arr = arr.reshape(3,2)\n",
+    "print(reshaped_arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "f00deedb-a240-42cb-bd42-702ce786f8d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "reshaped_arr = reshaped_arr.flatten() # Chuyển thành mảng 1 chiều\n",
+    "print(reshaped_arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "c973c5eb-2f82-428b-b0d8-6382be32ee10",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2 3 4]\n",
+      "[1 2 3 4]\n",
+      "[4 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Cắt lát mảng\n",
+    "arr = np.array([1, 2, 3, 4, 5])\n",
+    "\n",
+    "sub_arr = arr[1:4]  # Cắt từ phần tử thứ 1 đến 4\n",
+    "print(sub_arr) # 2 3 4 5\n",
+    "\n",
+    "sub_arr = arr[:-1]  # 1 2 3 4\n",
+    "print(sub_arr)\n",
+    "\n",
+    "sub_arr = arr[-2:]  # 4 5 \n",
+    "print(sub_arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68c697b5-22bc-4ee3-959e-05e83ede38e7",
    "metadata": {},
    "outputs": [],
    "source": []
